# moodle-clone-api

./: .gitignore  pyproject.toml
app/: database.py  main.py
app/api/v1/: __init__.py  courses.py  pages.py  sections.py  tests.py  users.py
app/core/: config.py  logging.py  register_exception_handlers.py
app/models/: course.py  user.py
app/models/context/: enums.py
app/schemas/: course.py  course_user.py  user.py
app/service/: course_service.py  course_user_service.py  page_service.py  section_service.py  test_service.py  user_service.py
app/utils/: password.py  schemas_utils.py
tests/: test_db.py
