[project]
name = "moodle_clone"
version = "0.0.1"
description = "moodle clone"
readme = "README.md"
required-python = ">=3.13"
dependencies = [
    "SQLAlchemy==2.0.47",
    "fastapi==0.133.1",
    "pydantic-settings==2.13.1",
    "PyJWT==2.11.0",
    "cryptography==46.0.5",
    "bcrypt==5.0.0"
]


[tool.pytest.ini_options]
pythonpath = "."